--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -30,7 +30,7 @@
         android:textColor="@color/black"
         android:textStyle="bold"/>
     <TextView
-        android:id="@+id/userDetails"
+        android:id="@+id/userEmailTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/_10ssp"
