--- a/app/src/main/res/layout/daftar_menu.xml
+++ b/app/src/main/res/layout/daftar_menu.xml
@@ -68,12 +68,14 @@
                 android:paddingHorizontal="@dimen/_8sdp"
                 android:layout_marginBottom="@dimen/_8sdp">
                 <Button
+                    android:id="@+id/ubahMenu"
                     android:layout_marginHorizontal="@dimen/_6sdp"
                     android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Ubah" />
                 <Button
+                    android:id="@+id/hapusMenu"
                     android:layout_weight="1"
                     android:layout_marginHorizontal="@dimen/_6sdp"
                     android:layout_width="match_parent"
